--- a/svm/svm.ipynb
+++ b/svm/svm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +52,21 @@
       "(398, 30) (398, 1)\n",
       "(171, 30) (171, 1)\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Ayu Romadhani\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\validation.py:1310: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9590643274853801\n"
+     ]
     }
    ],
    "source": [
@@ -77,7 +92,20 @@
     "from sklearn.model_selection import train_test_split\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=0)\n",
     "print(x_train.shape, y_train.shape)\n",
-    "print(x_test.shape, y_test.shape)"
+    "print(x_test.shape, y_test.shape)\n",
+    "\n",
+    "from sklearn import svm\n",
+    "\n",
+    "# Define the SVM model with the correct kernel parameter\n",
+    "model = svm.SVC(kernel=\"linear\")\n",
+    "# Fit the model\n",
+    "modelfit = model.fit(x_train, y_train)\n",
+    "# Calculate accuracy\n",
+    "accuracy = modelfit.score(x_test, y_test)\n",
+    "# Make predictions\n",
+    "pred = model.predict(x_test)\n",
+    "# Print accuracy\n",
+    "print(accuracy)\n"
    ]
   }
  ],
