--- a/svm/svm.ipynb
+++ b/svm/svm.ipynb
@@ -95,10 +95,9 @@
     "print(x_test.shape, y_test.shape)\n",
     "\n",
     "from sklearn import svm\n",
-    "\n",
-    "# Define the SVM model with the correct kernel parameter\n",
+    "# Create a classifier\n",
     "model = svm.SVC(kernel=\"linear\")\n",
-    "# Fit the model\n",
+    "# Train the model\n",
     "modelfit = model.fit(x_train, y_train)\n",
     "# Calculate accuracy\n",
     "accuracy = modelfit.score(x_test, y_test)\n",
