--- a/svm/svm.ipynb
+++ b/svm/svm.ipynb
@@ -2,13 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "         id diagnosis  radius_mean  texture_mean  perimeter_mean  area_mean  \\\n",
+      "0    842302         M        17.99         10.38          122.80     1001.0   \n",
+      "1    842517         M        20.57         17.77          132.90     1326.0   \n",
+      "2  84300903         M        19.69         21.25          130.00     1203.0   \n",
+      "3  84348301         M        11.42         20.38           77.58      386.1   \n",
+      "4  84358402         M        20.29         14.34          135.10     1297.0   \n",
+      "\n",
+      "   smoothness_mean  compactness_mean  concavity_mean  concave points_mean  \\\n",
+      "0          0.11840           0.27760          0.3001              0.14710   \n",
+      "1          0.08474           0.07864          0.0869              0.07017   \n",
+      "2          0.10960           0.15990          0.1974              0.12790   \n",
+      "3          0.14250           0.28390          0.2414              0.10520   \n",
+      "4          0.10030           0.13280          0.1980              0.10430   \n",
+      "\n",
+      "   ...  texture_worst  perimeter_worst  area_worst  smoothness_worst  \\\n",
+      "0  ...          17.33           184.60      2019.0            0.1622   \n",
+      "1  ...          23.41           158.80      1956.0            0.1238   \n",
+      "2  ...          25.53           152.50      1709.0            0.1444   \n",
+      "3  ...          26.50            98.87       567.7            0.2098   \n",
+      "4  ...          16.67           152.20      1575.0            0.1374   \n",
+      "\n",
+      "   compactness_worst  concavity_worst  concave points_worst  symmetry_worst  \\\n",
+      "0             0.6656           0.7119                0.2654          0.4601   \n",
+      "1             0.1866           0.2416                0.1860          0.2750   \n",
+      "2             0.4245           0.4504                0.2430          0.3613   \n",
+      "3             0.8663           0.6869                0.2575          0.6638   \n",
+      "4             0.2050           0.4000                0.1625          0.2364   \n",
+      "\n",
+      "   fractal_dimension_worst  Unnamed: 32  \n",
+      "0                  0.11890          NaN  \n",
+      "1                  0.08902          NaN  \n",
+      "2                  0.08758          NaN  \n",
+      "3                  0.17300          NaN  \n",
+      "4                  0.07678          NaN  \n",
+      "\n",
+      "[5 rows x 33 columns]\n",
+      "id                           0\n",
+      "diagnosis                    0\n",
+      "radius_mean                  0\n",
+      "texture_mean                 0\n",
+      "perimeter_mean               0\n",
+      "area_mean                    0\n",
+      "smoothness_mean              0\n",
+      "compactness_mean             0\n",
+      "concavity_mean               0\n",
+      "concave points_mean          0\n",
+      "symmetry_mean                0\n",
+      "fractal_dimension_mean       0\n",
+      "radius_se                    0\n",
+      "texture_se                   0\n",
+      "perimeter_se                 0\n",
+      "area_se                      0\n",
+      "smoothness_se                0\n",
+      "compactness_se               0\n",
+      "concavity_se                 0\n",
+      "concave points_se            0\n",
+      "symmetry_se                  0\n",
+      "fractal_dimension_se         0\n",
+      "radius_worst                 0\n",
+      "texture_worst                0\n",
+      "perimeter_worst              0\n",
+      "area_worst                   0\n",
+      "smoothness_worst             0\n",
+      "compactness_worst            0\n",
+      "concavity_worst              0\n",
+      "concave points_worst         0\n",
+      "symmetry_worst               0\n",
+      "fractal_dimension_worst      0\n",
+      "Unnamed: 32                569\n",
+      "dtype: int64\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 569 entries, 0 to 568\n",
       "Data columns (total 31 columns):\n",
@@ -47,64 +117,82 @@
       " 30  fractal_dimension_worst  569 non-null    float64\n",
       "dtypes: float64(30), object(1)\n",
       "memory usage: 137.9+ KB\n",
+      "None\n",
       "(569, 30)\n",
-      "(569, 1)\n",
-      "(398, 30) (398, 1)\n",
-      "(171, 30) (171, 1)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Ayu Romadhani\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\validation.py:1310: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9590643274853801\n"
+      "(569,)\n",
+      "(398, 30) (398,)\n",
+      "(171, 30) (171,)\n",
+      "0.9590643274853801\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           B       0.98      0.95      0.97       108\n",
+      "           M       0.92      0.97      0.95        63\n",
+      "\n",
+      "    accuracy                           0.96       171\n",
+      "   macro avg       0.95      0.96      0.96       171\n",
+      "weighted avg       0.96      0.96      0.96       171\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "#import library pandas\n",
     "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import svm\n",
+    "from sklearn.metrics import classification_report\n",
+    "import pickle\n",
+    "\n",
     "#import file dataset yang digunakan\n",
     "df = pd.read_csv('breast_cancer.csv')\n",
+    "\n",
     "#tampilkan 5 data teratas\n",
-    "df.head()\n",
+    "print(df.head())\n",
+    "\n",
     "#pembersihan data\n",
-    "df.isna().sum()\n",
+    "print(df.isna().sum())\n",
+    "\n",
     "#menghapus kolom yang tidak dibutuhkan\n",
-    "df.drop(df.columns[[-1, 0]], axis=1,\n",
-    "        inplace=True)\n",
-    "df.info()\n",
+    "df.drop(df.columns[[-1, 0]], axis=1, inplace=True)\n",
+    "print(df.info())\n",
+    "\n",
     "# X adalah variable input, y adalah variable target\n",
-    "semua = list (df.columns[1:31])\n",
+    "semua = list(df.columns[1:31])\n",
     "x = df.loc[:, semua]\n",
-    "y = df[['diagnosis']]\n",
+    "y = df['diagnosis']\n",
     "print(x.shape)\n",
     "print(y.shape)\n",
+    "\n",
     "#memilah dataset \n",
-    "from sklearn.model_selection import train_test_split\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=0)\n",
     "print(x_train.shape, y_train.shape)\n",
     "print(x_test.shape, y_test.shape)\n",
     "\n",
-    "from sklearn import svm\n",
     "# Create a classifier\n",
     "model = svm.SVC(kernel=\"linear\")\n",
+    "\n",
     "# Train the model\n",
     "modelfit = model.fit(x_train, y_train)\n",
+    "\n",
     "# Calculate accuracy\n",
     "accuracy = modelfit.score(x_test, y_test)\n",
+    "\n",
     "# Make predictions\n",
-    "pred = model.predict(x_test)\n",
+    "y_pred = model.predict(x_test)\n",
+    "\n",
     "# Print accuracy\n",
-    "print(accuracy)\n"
+    "print(accuracy)\n",
+    "\n",
+    "# Evaluasi Model\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "# Import model ke file pickle\n",
+    "with open('svm_pickle', 'wb') as r:\n",
+    "    pickle.dump(modelfit,r)\n",
+    "\n",
+    "# Membaca file svm_pickle\n",
+    "with open('svm_pickle', 'rb') as r:\n",
+    "        model = pickle.load(r)"
    ]
   }
  ],
