--- a/svm/svm.ipynb
+++ b/svm/svm.ipynb
@@ -136,7 +136,7 @@
     }
    ],
    "source": [
-    "#import library pandas\n",
+    "#import library yang akan digunakan\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import svm\n",
