--- a/decision_tree/c45.ipynb
+++ b/decision_tree/c45.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,20 @@
       "(768, 8)\n",
       "(768, 1)\n",
       "(614, 8) (614, 1)\n",
-      "(154, 8) (154, 1)\n"
+      "(154, 8) (154, 1)\n",
+      "0.7532467532467533\n",
+      "acuracy: 0.7532467532467533\n",
+      "precision: 0.576271186440678\n",
+      "recall 0.723404255319149\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.77      0.81       107\n",
+      "           1       0.58      0.72      0.64        47\n",
+      "\n",
+      "    accuracy                           0.75       154\n",
+      "   macro avg       0.72      0.74      0.73       154\n",
+      "weighted avg       0.78      0.75      0.76       154\n",
+      "\n"
      ]
     }
    ],
@@ -33,7 +46,9 @@
     "# Import library yang akan digunakan\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn import metrics\n",
+    "import pickle\n",
     "\n",
     "# Import file dataset yang digunakan\n",
     "df = pd.read_csv('diabetes.csv')\n",
@@ -54,7 +69,27 @@
     "print(x_train.shape, y_train.shape)\n",
     "print(x_test.shape, y_test.shape)\n",
     "\n",
-    "# Membuat model"
+    "# Membuat model\n",
+    "model = DecisionTreeClassifier(criterion='entropy')\n",
+    "modelfit = model.fit(x_train, y_train)\n",
+    "accuracy = modelfit.score(x_test, y_test)\n",
+    "pred = model.predict(x_test)\n",
+    "print(accuracy)\n",
+    "\n",
+    "# Evaluasi model\n",
+    "#accuracy\n",
+    "print(\"acuracy:\",\n",
+    "metrics.accuracy_score(y_test, y_pred=pred))\n",
+    "#precision score\n",
+    "print(\"precision:\",\n",
+    "metrics.precision_score(y_test, y_pred=pred))\n",
+    "#recall score\n",
+    "print(\"recall\", metrics.recall_score(y_test, y_pred=pred))\n",
+    "print(metrics.classification_report(y_test, y_pred=pred))\n",
+    "\n",
+    "# Menyimpan model\n",
+    "with open('DT_pickle','wb') as r:\n",
+    "   pickle.dump(modelfit,r)"
    ]
   }
  ],
