--- a/svm/svm.ipynb
+++ b/svm/svm.ipynb
@@ -186,7 +186,7 @@
     "# Evaluasi Model\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "# Import model ke file pickle\n",
+    "# Menyimpan model\n",
     "with open('svm_pickle', 'wb') as r:\n",
     "    pickle.dump(modelfit,r)\n",
     "\n",
